--- a/homepage/contact.html
+++ b/homepage/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,48 +29,53 @@
 </head>
 
 <body>
-<div class="container">
-<header>
-  <div class="header-inner">
-    <h1>
-      <img src="images/icon-circle_transparent.png" alt="劇団アイコン" class="icon" id="icon">
-      劇団つぎはぎ
-    </h1>
-    <p>継いで、剥いで、あなたを魅せる舞台を作る。</p>
+  <div class="container">
+    <header>
+      <div class="header-inner">
+        <h1>
+          <img src="images/icon-circle_transparent.png" alt="劇団アイコン" class="icon" id="icon">
+          劇団つぎはぎ
+        </h1>
+        <p>継いで、剥いで、あなたを魅せる舞台を作る。</p>
+      </div>
+    </header>
+
+    <button class="nav-toggle" id="navToggleBtn" aria-label="メニューを開く"></button>
+
+    <nav class="nav" id="navMenu">
+      <a href="home.html">ホーム</a>
+      <a href="about.html">劇団紹介</a>
+      <a href="shows.html">公演情報</a>
+      <a href="support.html">支援・チケット</a>
+      <a href="contact.html" class="active">お問い合わせ</a>
+    </nav>
+
+    <section id="contact">
+      <h2>お問い合わせ</h2>
+      <p>劇団つぎはぎへのご連絡・ご質問・ご依頼は、下記の方法でお気軽にご連絡ください。<br>公演に関するお問い合わせ、取材のご相談など、内容に応じて対応いたします。</p>
+      <p>
+        <img src="images/mail-icon.png" alt="メールアイコン" width="20" height="20"
+          style="vertical-align: middle; margin-right: 6px;">
+        メール：<a href="mailto:tsugihagi.theatretroup@gmail.com">tsugihagi.theatretroup@gmail.com</a>
+      </p>
+      <p>
+        <img src="images/x-icon.png" alt="x-icon" width="20" height="20"
+          style="vertical-align: middle; margin-right: 6px;">
+        X(旧Twitter)：<a href="https://x.com/tsugihagi_troup" target="_blank">@tsugihagi_troup</a>
+      </p>
+      <p>
+        <img src="images/instagram-icon.png" alt="インスタアイコン" width="20" height="20"
+          style="vertical-align: middle; margin-right: 6px;">
+        Instagram：<a href="https://www.instagram.com/tsugihagi_troup?igsh=ZnJ2YTFqOG00ZTQ4"
+          target="_blank">@tsugihagi_troup</a>
+      </p>
+    </section>
+
+    <footer>
+      <p>&copy; 2025 劇団つぎはぎ All rights reserved.</p>
+    </footer>
+
   </div>
-</header>
-
-<button class="nav-toggle" id="navToggleBtn" aria-label="メニューを開く"></button>
-
-<nav class="nav" id="navMenu">
-  <a href="home.html">ホーム</a>
-  <a href="about.html">劇団紹介</a>
-  <a href="shows.html">公演情報</a>
-  <a href="support.html">支援・チケット</a>
-  <a href="contact.html" class="active">お問い合わせ</a>
-</nav>
-
-<section id="contact">
-  <h2>お問い合わせ</h2>
-  <p>劇団つぎはぎへのご連絡・ご質問・ご依頼は、下記の方法でお気軽にご連絡ください。<br>公演に関するお問い合わせ、取材のご相談など、内容に応じて対応いたします。</p>
-  <p>
-    <img src="images/mail-icon.png" alt="メールアイコン" width="20" height="20" style="vertical-align: middle; margin-right: 6px;">
-    メール：<a href="mailto:tsugihagi.theatretroup@gmail.com">tsugihagi.theatretroup@gmail.com</a>
-  </p>
-  <p>
-    <img src="images/x-icon.png" alt="x-icon" width="20" height="20" style="vertical-align: middle; margin-right: 6px;">
-    X(旧Twitter)：<a href="https://x.com/tsugihagi_troup" target="_blank">@tsugihagi_troup</a>
-  </p>
-  <p>
-    <img src="images/instagram-icon.png" alt="インスタアイコン" width="20" height="20" style="vertical-align: middle; margin-right: 6px;">
-    Instagram：<a href="https://www.instagram.com/tsugihagi_troup?igsh=ZnJ2YTFqOG00ZTQ4" target="_blank">@tsugihagi_troup</a>
-  </p>
-</section>
-
-<footer>
-  <p>&copy; 2025 劇団つぎはぎ All rights reserved.</p>
-</footer>
-
-</div>
 </body>
+
 </html>
