--- a/homepage/index.html
+++ b/homepage/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +16,8 @@
   <meta name="twitter:site" content="@tsugihagi_troup">
   <title>劇団つぎはぎ - 公式サイト</title>
   <style>
-    html, body {
+    html,
+    body {
       margin: 0;
       padding: 0;
       height: 100%;
@@ -30,11 +32,13 @@
       height: 100%;
       color: white;
       font-size: 2rem;
-      background-image: url('images/back.png'); /* ← 背景画像を指定 */
+      background-image: url('images/back.png');
+      /* ← 背景画像を指定 */
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
-      animation: fadeOut 2s ease 3s forwards; /* 3秒後に2秒かけて消える */
+      animation: fadeOut 2s ease 3s forwards;
+      /* 3秒後に2秒かけて消える */
       position: absolute;
       width: 100%;
       z-index: 1;
@@ -71,10 +75,13 @@
       }
 
     }
-      .center-container {
+
+    .center-container {
       display: flex;
-      justify-content: center; /* 横方向に中央寄せ */
-      align-items: center;     /* 縦方向に中央寄せ */
+      justify-content: center;
+      /* 横方向に中央寄せ */
+      align-items: center;
+      /* 縦方向に中央寄せ */
       height: 100vh;
     }
 
@@ -85,6 +92,7 @@
     }
   </style>
 </head>
+
 <body>
   <div id="splash"></div>
   <div id="blackout"></div>
@@ -94,7 +102,7 @@
     </div>
   </div>
 
- <div id="blackout"></div>
+  <div id="blackout"></div>
 
   <script>
     setTimeout(() => {
