--- a/homepage/about.html
+++ b/homepage/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,78 +29,80 @@
 </head>
 
 <body>
-<div class="container">
-<header>
-  <div class="header-inner">
-    <h1>
-      <img src="images/icon-circle_transparent.png" alt="劇団アイコン" class="icon" id="icon">
-      劇団つぎはぎ
-    </h1>
-    <p>継いで、剥いで、あなたを魅せる舞台を作る。</p>
+  <div class="container">
+    <header>
+      <div class="header-inner">
+        <h1>
+          <img src="images/icon-circle_transparent.png" alt="劇団アイコン" class="icon" id="icon">
+          劇団つぎはぎ
+        </h1>
+        <p>継いで、剥いで、あなたを魅せる舞台を作る。</p>
+      </div>
+    </header>
+
+    <button class="nav-toggle" id="navToggleBtn" aria-label="メニューを開く"></button>
+
+    <nav class="nav" id="navMenu">
+      <a href="home.html">ホーム</a>
+      <a href="about.html" class="active">劇団紹介</a>
+      <a href="shows.html">公演情報</a>
+      <a href="support.html">支援・チケット</a>
+      <a href="contact.html">お問い合わせ</a>
+    </nav>
+
+    <section id="about">
+      <h2>劇団紹介</h2>
+      <p>
+        大和天音を主宰に中等教育学校演劇部の2024年度卒業代を中心に結成。個性のある役者陣が多く、会話劇を中心としたコメディを得意とする。劇団名は、あまりにも纏まりがなく自由なメンバーが、なんとかお互いの短所を補い合って成立していることから決定。
+        継いで、剥いで、あなたを魅せる舞台を作る。</p>
+      <h3>メンバー紹介</h3>
+      <div class="member">● 大和 天音 （脚本・演出・役者）</div>
+      <div class="member">● ゆな（役者）</div>
+      <div class="member">● まみ（役者）</div>
+      <div class="member">● 早記（役者）</div>
+      <div class="member">● 高橋 亜煌（役者）</div>
+      <div class="member">● 龍之介（役者）</div>
+      <div class="member">● いーやま（役者）</div>
+      <div class="member">● そーた（舞台装置）</div>
+      <div class="member">● angie（宣伝美術）</div>
+      <div class="member">● くろだ（スタッフ）</div>
+      <div class="member">● のぐち（スタッフ）</div>
+      <div class="menber">● なみる（スタッフ）</div>
+    </section>
+
+    <section>
+      <h3>沿革</h3>
+      <p>2025年5月 劇団結成</p>
+      <p>2025年6月 公式SNSアカウント開設</p>
+      <p>2025年8月 ホームページ開設</p>
+    </section>
+
+    <footer>
+      <p>&copy; 2025 劇団つぎはぎ All rights reserved.</p>
+    </footer>
+
+    <button id="toTopBtn" title="ページの先頭へ">↑</button>
+    <script>
+      const toTopBtn = document.getElementById("toTopBtn");
+
+      // スクロールで表示・非表示を切り替え
+      window.onscroll = function () {
+        if (document.documentElement.scrollTop > 300) {
+          toTopBtn.style.display = "block";
+        } else {
+          toTopBtn.style.display = "none";
+        }
+      };
+
+      // ボタンをクリックするとトップに戻る
+      toTopBtn.addEventListener("click", () => {
+        window.scrollTo({
+          top: 0,
+          behavior: "smooth"
+        });
+      });
+    </script>
   </div>
-</header>
-
-<button class="nav-toggle" id="navToggleBtn" aria-label="メニューを開く"></button>
-
-<nav class="nav" id="navMenu">
-  <a href="home.html">ホーム</a>
-  <a href="about.html" class="active">劇団紹介</a>
-  <a href="shows.html">公演情報</a>
-  <a href="support.html">支援・チケット</a>
-  <a href="contact.html">お問い合わせ</a>
-</nav>
-
-<section id="about">
-  <h2>劇団紹介</h2>
-  <p>大和天音を主宰に中等教育学校演劇部の2024年度卒業代を中心に結成。個性のある役者陣が多く、会話劇を中心としたコメディを得意とする。劇団名は、あまりにも纏まりがなく自由なメンバーが、なんとかお互いの短所を補い合って成立していることから決定。
-継いで、剥いで、あなたを魅せる舞台を作る。</p>
-  <h3>メンバー紹介</h3>
-  <div class="member">● 大和 天音 （脚本・演出・役者）</div>
-  <div class="member">● ゆな（役者）</div>
-  <div class="member">● まみ（役者）</div>
-  <div class="member">● 早記（役者）</div>
-  <div class="member">● 高橋 亜煌（役者）</div>
-  <div class="member">● 龍之介（役者）</div>
-  <div class="member">● いーやま（役者）</div>
-  <div class="member">● そーた（舞台装置）</div>
-  <div class="member">● angie（宣伝美術）</div>
-  <div class="member">● くろだ（スタッフ）</div>
-  <div class="member">● のぐち（スタッフ）</div>
-  <div class="menber">● なみる（スタッフ）</div>
-</section>
-
-<section>
-  <h3>沿革</h3>
-  <p>2025年5月  劇団結成</p>
-  <p>2025年6月  公式SNSアカウント開設</p>
-  <p>2025年8月  ホームページ開設</p>
-</section>
-
-<footer>
-  <p>&copy; 2025 劇団つぎはぎ All rights reserved.</p>
-</footer>
-
-<button id="toTopBtn" title="ページの先頭へ">↑</button>
-<script>
-  const toTopBtn = document.getElementById("toTopBtn");
-
-  // スクロールで表示・非表示を切り替え
-  window.onscroll = function () {
-    if (document.documentElement.scrollTop > 300) {
-      toTopBtn.style.display = "block";
-    } else {
-      toTopBtn.style.display = "none";
-    }
-  };
-
-  // ボタンをクリックするとトップに戻る
-  toTopBtn.addEventListener("click", () => {
-    window.scrollTo({
-      top: 0,
-      behavior: "smooth"
-    });
-  });
-</script>
-</div>
 </body>
+
 </html>
