change oldpage.html l124

--- a/oldpage.html
+++ b/oldpage.html
@@ -121,7 +121,7 @@
       </div>
     </header>
     <section>
-      <h2>このページは現在使われておりません</h2>
+      <h2>このページは現在使われておりません。</h2>
       <p>最新版はこちら。</p>
       <div class="button-row">
         <a class="public-btn" href="http://tsugihagi.com/" target="_blank">劇団つぎはぎ 公式サイト</a>
