--- a/homepage/shows.html
+++ b/homepage/shows.html
@@ -53,9 +53,17 @@
     <section id="shows">
       <h2>公演情報</h2>
       <h3>【最新公演】</h3>
-      <p>『未定（近日公開予定）』<br>
-        日時：2025年9月14日(日)、15日(月)<br>
-        会場：藍住町総合文化ホール</p>
+      <p>『大人なら、大人だから、大人でも。』<br>
+        ◯場所<br>
+        藍住町総合文化ホール 2F  交流室2<br>
+        ◯日時<br>
+        2025年9月<br>
+        14日(日) 1st:開場14:00～,上演14:30～<br>
+        14日(日) 2st:開場18:00～,上演18:30～<br>
+        15日(月) 3st:開場 9:30～,上演10:00～<br>
+        15日(月) 4st:開場14:00～,上演14:30～<br>
+        15日(月) 5st:開場18:00～,上演18:30～<br>
+      </p>
     </section>
 
     <footer>
