add flier image to shows.html

--- a/homepage/shows.html
+++ b/homepage/shows.html
@@ -64,6 +64,12 @@
         15日(月) 4st:開場14:00～,上演14:30～<br>
         15日(月) 5st:開場18:00～,上演18:30～<br>
       </p>
+
+      <!-- ポスター画像 -->
+      <div class="poster-gallery">
+        <img src="images/Otonanaraotonadakaraotonademo_flier.jpg" alt="最新公演ポスター1">
+        <img src="images/Otonanaraotonadakaraotonademo_poster.jpg" alt="最新公演ポスター2">
+      </div>
     </section>
 
     <footer>
