change og-image path

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -7,13 +7,21 @@
   <meta name="description" content="劇団つぎはぎの公式サイト。公演情報、支援チケット、お問い合わせなど">
   <meta property="og:title" content="劇団つぎはぎ 公式サイト">
   <meta property="og:description" content="継いで、剥いで、あなたを魅せる舞台を作る。">
-  <meta property="og:image" content="https://tsigihagi.oops.jp/images/og-image.png">
+  <meta property="og:image" content="http://tsugihagi.com/images/og-image.png">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="劇団つぎはぎ 公式サイト">
   <meta name="twitter:description" content="継いで、剥いで、あなたを魅せる舞台を作る。">
-  <meta name="twitter:image" content="https://tsigihagi.oops.jp/images/og-image.png">
-  <meta property="og:image" content="https://tsigihagi.oops.jp/images/og-image.png">
+  <meta name="twitter:image" content="http://tsugihagi.com/images/og-image.png">
+  <meta property="og:image" content="http://tsugihagi.com/images/og-image.png">
   <meta name="twitter:site" content="@tsugihagi_troup">
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "url": "http://tsugihagi.com/",
+    "logo": "http://tsugihagi.com/images/icon-circle_transparent.png"
+  }
+</script>
   <title>劇団つぎはぎ - 公式サイト</title>
   <style>
     html,
