--- a/homepage/home.html
+++ b/homepage/home.html
@@ -7,12 +7,12 @@
   <meta name="description" content="劇団つぎはぎの公式サイト。公演情報、支援チケット、お問い合わせなど">
   <meta property="og:title" content="劇団つぎはぎ 公式サイト">
   <meta property="og:description" content="継いで、剥いで、あなたを魅せる舞台を作る。">
-  <meta property="og:image" content="https://tsigihagi.oops.jp/images/og-image.png">
+  <meta property="og:image" content="http://tsugihagi.com/images/og-image.png">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="劇団つぎはぎ 公式サイト">
   <meta name="twitter:description" content="継いで、剥いで、あなたを魅せる舞台を作る。">
-  <meta name="twitter:image" content="https://tsigihagi.oops.jp/images/og-image.png">
-  <meta property="og:image" content="https://tsigihagi.oops.jp/images/og-image.png">
+  <meta name="twitter:image" content="http://tsugihagi.com/images/og-image.png">
+  <meta property="og:image" content="http://tsugihagi.com/images/og-image.png">
   <meta name="twitter:site" content="@tsugihagi_troup">
   <title>劇団つぎはぎ - 公式サイト</title>
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
@@ -56,6 +56,10 @@
       <p>● 劇団公式HPを開設</p>
       <a href="shows.html">● 初回講演、始動！</a>
 
+      <div class="poster-gallery">
+        <img src="images/Otonanaraotonadakaraotonademo_flier.jpg" alt="最新公演ポスター1">
+        <img src="images/Otonanaraotonadakaraotonademo_poster.jpg" alt="最新公演ポスター2">
+      </div>
     </section>
 
     <section>
