add poster light

--- a/homepage/home.html
+++ b/homepage/home.html
@@ -22,9 +22,11 @@
   <link rel="stylesheet" href="css/icon.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/poster.css">
   <link rel="stylesheet" href="css/toTopBtn.css">
   <script src="js/iconClick.js"></script>
   <script src="js/navToggle.js"></script>
+  <script arc="js/posterImg.js"></script>
   <script src="js/toTop.js"></script>
 </head>
 
