--- a/homepage/shows.html
+++ b/homepage/shows.html
@@ -22,9 +22,11 @@
   <link rel="stylesheet" href="css/icon.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/poster.css">
   <link rel="stylesheet" href="css/toTopBtn.css">
   <script src="js/iconClick.js"></script>
   <script src="js/navToggle.js"></script>
+  <script arc="js/posterImg.js"></script>
   <script src="js/toTop.js"></script>
 </head>
 
@@ -69,6 +71,11 @@
       <div class="poster-gallery">
         <img src="images/Otonanaraotonadakaraotonademo_flier.jpg" alt="最新公演ポスター1">
         <img src="images/Otonanaraotonadakaraotonademo_poster.jpg" alt="最新公演ポスター2">
+      </div>
+
+      <div id="lightbox" class="lightbox">
+        <span class="close">&times;</span>
+        <img class="lightbox-content" id="lightboxImg">
       </div>
     </section>
 
