--- a/homepage/shows.html
+++ b/homepage/shows.html
@@ -26,7 +26,7 @@
   <link rel="stylesheet" href="css/toTopBtn.css">
   <script src="js/iconClick.js"></script>
   <script src="js/navToggle.js"></script>
-  <script arc="js/posterImg.js"></script>
+  <script src="js/posterLightbox.js"></script>
   <script src="js/toTop.js"></script>
 </head>
 
@@ -69,10 +69,11 @@
 
       <!-- ポスター画像 -->
       <div class="poster-gallery">
-        <img src="images/Otonanaraotonadakaraotonademo_flier.jpg" alt="最新公演ポスター1">
-        <img src="images/Otonanaraotonadakaraotonademo_poster.jpg" alt="最新公演ポスター2">
+        <img src="images/Otonanaraotonadakaraotonademo_flier.jpg" alt="最新公演ポスター1" class="poster-img">
+        <img src="images/Otonanaraotonadakaraotonademo_poster.jpg" alt="最新公演ポスター2" class="poster-img">
       </div>
 
+      <!-- モーダル（拡大表示用） -->
       <div id="lightbox" class="lightbox">
         <span class="close">&times;</span>
         <img class="lightbox-content" id="lightboxImg">
