update index animation

--- a/homepage/test.html
+++ b/homepage/test.html
@@ -1,31 +1,20 @@
 <!DOCTYPE html>
 <html lang="ja">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="劇団つぎはぎの公式サイト。公演情報、支援チケット、お問い合わせなど">
   <meta property="og:title" content="劇団つぎはぎ 公式サイト">
-  <meta property="og:description" content="継いで、剥いで、あなたを魅せる舞台を作る。">
-  <meta property="og:image" content="http://tsugihagi.com/images/og-image.png">
+  <meta property="og:description" content="誰継いで、剥いで、あなたを魅せる舞台を作る。">
+  <meta property="og:image" content="https://Nijuju1180.github.io/tsugihagi/images/og-image.png">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="劇団つぎはぎ 公式サイト">
   <meta name="twitter:description" content="継いで、剥いで、あなたを魅せる舞台を作る。">
-  <meta name="twitter:image" content="http://tsugihagi.com/images/og-image.png">
-  <meta property="og:image" content="http://tsugihagi.com/images/og-image.png">
+  <meta name="twitter:image" content="https://tsugihagi.com/images/og-image.png">
   <meta name="twitter:site" content="@tsugihagi_troup">
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Organization",
-    "url": "http://tsugihagi.com/",
-    "logo": "http://tsugihagi.com/images/icon-circle_transparent.png"
-  }
-  </script>
   <title>劇団つぎはぎ - 公式サイト</title>
   <style>
-    html,
-    body {
+    html, body {
       margin: 0;
       padding: 0;
       height: 100%;
@@ -40,13 +29,11 @@
       height: 100%;
       color: white;
       font-size: 2rem;
-      background-image: url('images/back.png');
-      /* ← 背景画像を指定 */
+      background-image: url('images/back.png'); /* ← 背景画像を指定 */
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
-      animation: fadeOut 2s ease 3s forwards;
-      /* 3秒後に2秒かけて消える */
+      animation: fadeOut 2s ease 3s forwards; /* 3秒後に2秒かけて消える */
       position: absolute;
       width: 100%;
       z-index: 1;
@@ -81,15 +68,12 @@
       to {
         opacity: 1;
       }
-
     }
 
     .center-container {
       display: flex;
-      justify-content: center;
-      /* 横方向に中央寄せ */
-      align-items: center;
-      /* 縦方向に中央寄せ */
+      justify-content: center; /* 横方向に中央寄せ */
+      align-items: center;     /* 縦方向に中央寄せ */
       height: 100vh;
     }
 
@@ -100,16 +84,12 @@
     }
   </style>
 </head>
-
 <body>
-  <div id="splash"></div>
-  <div id="blackout"></div>
   <div id="splash">
     <div class="center-container">
-      <img src="images/title.png" alt="ロゴ画像">
+      <img src="images/tittle.png" alt="ロゴ画像">
     </div>
   </div>
-
   <div id="blackout"></div>
 
   <script>
