--- a/homepage/home.html
+++ b/homepage/home.html
@@ -56,7 +56,7 @@
       <h2>新着情報</h2>
       <a href="contact.html">● 劇団公式SNSアカウント開設</a>
       <p>● 劇団公式HPを開設</p>
-      <a href="shows.html">● 初回講演『大人なら、大人だから、大人でも。』始動！</a>
+      <a href="shows.html">● 初回公演『大人なら、大人だから、大人でも。』始動！</a>
       <p>● ポスター及びフライヤーを公開</p>
       <div class="poster-gallery">
         <img src="images/Otonanaraotonadakaraotonademo_flier.jpg" alt="最新公演ポスター1" class="poster-img">
