add ticket info

--- a/homepage/home.html
+++ b/homepage/home.html
@@ -58,6 +58,7 @@
       <p>● 劇団公式HPを開設</p>
       <a href="shows.html">● 初回公演『大人なら、大人だから、大人でも。』始動！</a>
       <p>● ポスター及びフライヤーを公開</p>
+      <a href="support.html">● 初回公演チケット販売開始</a>
       <div class="poster-gallery">
         <img src="images/Otonanaraotonadakaraotonademo_flier.jpg" alt="最新公演ポスター1" class="poster-img">
         <img src="images/Otonanaraotonadakaraotonademo_poster.jpg" alt="最新公演ポスター2" class="poster-img">
