--- a/homepage/support.html
+++ b/homepage/support.html
@@ -57,7 +57,7 @@
         <a class="public-btn"
           href="https://camp-fire.jp/projects/862102/view?utm_campaign=cp_po_share_c_msg_mypage_projects_show"
           target="_blank">支援ページはこちら</a>
-        <a class="public-btn" href="nopage.html" target="_blank">チケット予約ページ</a>
+        <a class="public-btn" href="https://ticket.corich.jp/apply/396629/" target="_blank">チケット予約ページ</a>
       </div>
     </section>
 
