update show,support,about,and contact info

--- a/homepage/contact.html
+++ b/homepage/contact.html
@@ -69,6 +69,12 @@
         Instagram：<a href="https://www.instagram.com/tsugihagi_troup?igsh=ZnJ2YTFqOG00ZTQ4"
           target="_blank">@tsugihagi_troup</a>
       </p>
+      <p>
+        <img src="images/Corich-icon.png" alt="Corichアイコン" width="20" height="20"
+          style="vertical-align: middle; margin-right: 6px;">
+        Corich：<a href="https://stage.corich.jp/troupe/119054"
+          target="_blank">@tsugihagi_troup</a>
+      </p>
     </section>
 
     <footer>
