--- a/homepage/shows.html
+++ b/homepage/shows.html
@@ -55,16 +55,24 @@
     <section id="shows">
       <h2>公演情報</h2>
       <h3>【最新公演】</h3>
-      <p>『大人なら、大人だから、大人でも。』<br>
+      <h4>『大人なら、大人だから、大人でも。』</h4>
+      <p>
+        <br>
         ◯場所<br>
-        藍住町総合文化ホール 2F  交流室2<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;藍住町総合文化ホール 2F  交流室2<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;〒771-1203&nbsp;徳島県板野郡藍住町奥野字矢上前32-1<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;鉄道：JR徳島駅からJR勝瑞駅&nbsp;12分<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;バス：JR徳島駅から「藍住役場前」停留所下車&nbsp;&nbsp;のち徒歩5分<br>
         ◯日時<br>
-        2025年9月<br>
-        14日(日) 1st:開場14:00～,上演14:30～<br>
-        14日(日) 2st:開場18:00～,上演18:30～<br>
-        15日(月) 3st:開場 9:30～,上演10:00～<br>
-        15日(月) 4st:開場14:00～,上演14:30～<br>
-        15日(月) 5st:開場18:00～,上演18:30～<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;2025年9月<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;14日(日) 1st:開場14:00～,上演14:30～<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;14日(日) 2st:開場18:00～,上演18:30～<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;15日(月) 3st:開場 9:30～,上演10:00～<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;15日(月) 4st:開場14:00～,上演14:30～<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;15日(月) 5st:開場18:00～,上演18:30～<br>
+        ◯上演時間<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;約120分<br>
+        <a href="support.html">◯チケット購入はこちら</a>
       </p>
 
       <!-- ポスター画像 -->
