--- a/homepage/support.html
+++ b/homepage/support.html
@@ -53,6 +53,19 @@
     <section id="support">
       <h2>支援・チケット</h2>
       <p>劇団つぎはぎでは、クラウドファンディングやチケットのご予約を受け付けております。</p>
+      <h3>大人なら、大人だから、大人でも。</h3>
+      <p>
+        ◯チケット<br>
+        &nbsp;&nbsp;大人：1,000円<br>
+        &nbsp;&nbsp;高校生以下：500円<br>
+        &nbsp;&nbsp;当日現金払い<br>
+        &nbsp;&nbsp;一部当日券あり<br>
+        <br>
+        ◯クラウドファンディング<br>
+        &nbsp;&nbsp;支援金額：1,000円～10,000円<br>
+        &nbsp;&nbsp;リターン：限定映像や特製アルバムなど<br>
+        &nbsp;&nbsp;詳細はクラファンページへ<br>
+      </p>
       <div class="button-row">
         <a class="public-btn"
           href="https://camp-fire.jp/projects/862102/view?utm_campaign=cp_po_share_c_msg_mypage_projects_show"
