--- a/homepage/about.html
+++ b/homepage/about.html
@@ -56,18 +56,20 @@
         大和天音を主宰に中等教育学校演劇部の2024年度卒業代を中心に結成。個性のある役者陣が多く、会話劇を中心としたコメディを得意とする。劇団名は、あまりにも纏まりがなく自由なメンバーが、なんとかお互いの短所を補い合って成立していることから決定。
         継いで、剥いで、あなたを魅せる舞台を作る。</p>
       <h3>メンバー紹介</h3>
-      <div class="member">● 大和 天音 （脚本・演出・役者）</div>
-      <div class="member">● ゆな（役者）</div>
-      <div class="member">● まみ（役者）</div>
-      <div class="member">● 早記（役者）</div>
-      <div class="member">● 高橋 亜煌（役者）</div>
-      <div class="member">● 龍之介（役者）</div>
-      <div class="member">● いーやま（役者）</div>
-      <div class="member">● そーた（舞台装置）</div>
-      <div class="member">● angie（宣伝美術）</div>
-      <div class="member">● くろだ（スタッフ）</div>
-      <div class="member">● のぐち（スタッフ）</div>
-      <div class="menber">● なみる（スタッフ）</div>
+      <div class="member">● 主宰・作・演出：大和天音</div>
+      <div class="member">● 主宰補佐：ゆな・まみ</div>
+      <div class="member">● 演出補佐：くろだ</div>
+      <div class="member">● 舞台監督：なみる</div>
+      <div class="member">● 舞台監督補佐：のぐち</div>
+      <div class="member">● 制作：いーやま・ゆな</div>
+      <div class="member">● 制作補佐：くろだ</div>
+      <div class="member">● 広報：ゆな・のぐち</div>
+      <div class="member">● 照明：そーた</div>
+      <div class="member">● 照明補佐：くろだ</div>
+      <div class="member">● 音響：まみ</div>
+      <div class="member">● 舞台美術：そーた</div>
+      <div class="member">● 舞台美術補佐：いーやま</div>
+      <div class="menber">● 宣伝美術：大和天音・angie大和 天音</div>
     </section>
 
     <section>
@@ -75,6 +77,7 @@
       <p>2025年5月 劇団結成</p>
       <p>2025年6月 公式SNSアカウント開設</p>
       <p>2025年8月 ホームページ開設</p>
+      <p>2025年9月 初回公演『大人なら、大人だから、大人でも。』上演</p>
     </section>
 
     <footer>
