--- a/homepage/contact.html
+++ b/homepage/contact.html
@@ -73,7 +73,7 @@
         <img src="images/Corich-icon.png" alt="Corichアイコン" width="20" height="20"
           style="vertical-align: middle; margin-right: 6px;">
         Corich：<a href="https://stage.corich.jp/troupe/119054"
-          target="_blank">@tsugihagi_troup</a>
+          target="_blank">劇団つぎはぎ</a>
       </p>
     </section>
 
