change flier image

--- a/homepage/shows.html
+++ b/homepage/shows.html
@@ -78,7 +78,7 @@
       <!-- ポスター画像 -->
       <div class="poster-gallery">
         <img src="images/Otonanaraotonadakaraotonademo_flier.jpg" alt="最新公演ポスター1" class="poster-img">
-        <img src="images/Otonanaraotonadakaraotonademo_poster.jpg" alt="最新公演ポスター2" class="poster-img">
+        <img src="images/Otonanaraotonadakaraotonademo_poster.png" alt="最新公演ポスター2" class="poster-img">
       </div>
 
       <!-- モーダル（拡大表示用） -->
