--- a/homepage/home.html
+++ b/homepage/home.html
@@ -61,7 +61,7 @@
       <a href="support.html">● 初回公演チケット販売開始</a>
       <div class="poster-gallery">
         <img src="images/Otonanaraotonadakaraotonademo_flier.jpg" alt="最新公演ポスター1" class="poster-img">
-        <img src="images/Otonanaraotonadakaraotonademo_poster.jpg" alt="最新公演ポスター2" class="poster-img">
+        <img src="images/Otonanaraotonadakaraotonademo_poster.png" alt="最新公演ポスター2" class="poster-img">
       </div>
 
       <!-- モーダル（拡大表示用） -->
