--- a/homepage/about.html
+++ b/homepage/about.html
@@ -69,7 +69,7 @@
       <div class="member">● 音響：まみ</div>
       <div class="member">● 舞台美術：そーた</div>
       <div class="member">● 舞台美術補佐：いーやま</div>
-      <div class="menber">● 宣伝美術：大和天音・angie大和 天音</div>
+      <div class="menber">● 宣伝美術：大和天音・angie</div>
     </section>
 
     <section>
