--- a/homepage/about.html
+++ b/homepage/about.html
@@ -55,13 +55,14 @@
       <p>
         大和天音を主宰に中等教育学校演劇部の2024年度卒業代を中心に結成。個性のある役者陣が多く、会話劇を中心としたコメディを得意とする。劇団名は、あまりにも纏まりがなく自由なメンバーが、なんとかお互いの短所を補い合って成立していることから決定。
         継いで、剥いで、あなたを魅せる舞台を作る。</p>
-      <h3>メンバー紹介</h3>
-      <div class="member">● 主宰・作・演出：大和天音</div>
+      <h3>団員紹介</h3>
+      <div class="member">● 主宰：大和天音</div>
       <div class="member">● 主宰補佐：ゆな・まみ</div>
+      <div class="member">● 作・演出：大和天音</div>
       <div class="member">● 演出補佐：くろだ</div>
       <div class="member">● 舞台監督：なみる</div>
       <div class="member">● 舞台監督補佐：のぐち</div>
-      <div class="member">● 制作：いーやま・ゆな</div>
+      <div class="member">● 制作：いーやま・ゆな・くりやま</div>
       <div class="member">● 制作補佐：くろだ</div>
       <div class="member">● 広報：ゆな・のぐち</div>
       <div class="member">● 照明：そーた</div>
