--- a/homepage/shows.html
+++ b/homepage/shows.html
@@ -56,6 +56,9 @@
       <h2>公演情報</h2>
       <h3>【最新公演】</h3>
       <h4>『大人なら、大人だから、大人でも。』</h4>
+      <div class="button-row">
+        <a class="public-btn" href="Otonanara.html" target="_blank">公演特設ページはこちら</a>
+      </div>
       <p>
         <br>
         ◯場所<br>
