This is header test file

--- a/homepage/test.html
+++ b/homepage/test.html
@@ -1,118 +1,67 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="劇団つぎはぎの公式サイト。公演情報、支援チケット、お問い合わせなど">
-  <meta property="og:title" content="劇団つぎはぎ 公式サイト">
-  <meta property="og:description" content="誰継いで、剥いで、あなたを魅せる舞台を作る。">
-  <meta property="og:image" content="https://Nijuju1180.github.io/tsugihagi/images/og-image.png">
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="劇団つぎはぎ 公式サイト">
-  <meta name="twitter:description" content="継いで、剥いで、あなたを魅せる舞台を作る。">
-  <meta name="twitter:image" content="https://tsugihagi.com/images/og-image.png">
-  <meta name="twitter:site" content="@tsugihagi_troup">
-  <title>劇団つぎはぎ - 公式サイト</title>
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      overflow: hidden;
-    }
+<style>
+.site-header {
+  position: sticky; /* スクロールしても上に固定 */
+  top: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 40px;
+  background: linear-gradient(90deg, #2c3e50, #4ca1af); /* おしゃれグラデーション */
+  color: white;
+  z-index: 1;
+}
 
-    /* ロゴ表示画面 */
-    #splash {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100%;
-      color: white;
-      font-size: 2rem;
-      background-image: url('images/back.png'); /* ← 背景画像を指定 */
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      animation: fadeOut 2s ease 3s forwards; /* 3秒後に2秒かけて消える */
-      position: absolute;
-      width: 100%;
-      z-index: 1;
-    }
+.logo {
+  font-size: 1.5em;
+  font-weight: bold;
+  letter-spacing: 2px;
+}
 
-    /* 白いブランク画面 */
-    #blackout {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: white;
-      opacity: 0;
-      z-index: 2;
-      pointer-events: none;
-    }
+.nav ul {
+  list-style: none;
+  display: flex;
+  gap: 25px;
+  margin: 0;
+  padding: 0;
+}
 
-    /* 黒い画面をフェードイン */
-    .fade-in {
-      animation: blackFadeIn 0.5s ease forwards;
-    }
+.nav a {
+  color: white;
+  text-decoration: none;
+  font-weight: 500;
+  position: relative;
+}
 
-    @keyframes fadeOut {
-      to {
-        opacity: 0;
-        visibility: hidden;
-      }
-    }
+.nav a::after {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 2px;
+  bottom: -4px;
+  left: 0;
+  background-color: white;
+  transition: width 0.3s;
+}
 
-    @keyframes blackFadeIn {
-      to {
-        opacity: 1;
-      }
-    }
-
-    .center-container {
-      display: flex;
-      justify-content: center; /* 横方向に中央寄せ */
-      align-items: center;     /* 縦方向に中央寄せ */
-      height: 100vh;
-    }
-
-    .center-container img {
-      max-width: 80%;
-      max-height: 80%;
-      object-fit: contain;
-    }
-  </style>
+.nav a:hover::after {
+  width: 100%; /* hoverで下線がスッと伸びる */
+}
+</style>
 </head>
 <body>
-  <div id="splash">
-    <div class="center-container">
-      <img src="images/tittle.png" alt="ロゴ画像">
-    </div>
-  </div>
-  <div id="blackout"></div>
-
-  <script>
-    // 🔹 通常は5秒後に遷移
-    let autoTimer = setTimeout(() => {
-      goHome();
-    }, 5000);
-
-    // 🔹 クリックで即スキップ
-    document.body.addEventListener("click", () => {
-      clearTimeout(autoTimer); // 自動遷移キャンセル
-      goHome(); // 即ジャンプ
-    });
-
-    function goHome() {
-      // 白い画面をフェードイン
-      document.getElementById("blackout").classList.add("fade-in");
-
-      // 白画面が出たあと（0.5秒後）にhome.htmlへ
-      setTimeout(() => {
-        window.location.href = "home.html";
-      }, 500);
-    }
-  </script>
+  <header class="site-header">
+  <div class="logo">劇団つぎはぎ</div>
+  <nav class="nav">
+    <ul>
+      <li><a href="#home">ホーム</a></li>
+      <li><a href="#about">公演情報</a></li>
+      <li><a href="#characters">登場人物</a></li>
+      <li><a href="#contact">お問い合わせ</a></li>
+    </ul>
+  </nav>
+</header>
 </body>
-</html>
