--- a/homepage/oldpage.html
+++ b/homepage/oldpage.html
@@ -124,7 +124,7 @@
       <h2>このページは現在使われておりません</h2>
       <p>最新版はこちら。</p>
       <div class="button-row">
-        <a class="public-btn" href="http://tsugihagi.com/" target="_blank">劇団つぎはぎ 公式サイト</a>
+        <a class="public-btn" href="https://tsugihagi.com/" target="_blank">劇団つぎはぎ 公式サイト</a>
       </div>
     </section>
 
