update all file -v2.0

--- a/homepage/about.html
+++ b/homepage/about.html
@@ -70,7 +70,7 @@
       <div class="member">● 音響：まみ</div>
       <div class="member">● 舞台美術：そーた</div>
       <div class="member">● 舞台美術補佐：いーやま</div>
-      <div class="menber">● 宣伝美術：大和天音・angie</div>
+      <div class="menber">● 宣伝美術：大和天音</div>
     </section>
 
     <section>
@@ -79,6 +79,7 @@
       <p>2025年6月 公式SNSアカウント開設</p>
       <p>2025年8月 ホームページ開設</p>
       <p>2025年9月 初回公演『大人なら、大人だから、大人でも。』上演</p>
+      <p>2025年10月 劇団公式LINE開設</p>
     </section>
 
     <footer>
