--- a/homepage/contact.html
+++ b/homepage/contact.html
@@ -70,6 +70,12 @@
           target="_blank">@tsugihagi_troup</a>
       </p>
       <p>
+        <img src="images/line-icon.png" alt="LINEアイコン" width="20" height="20"
+          style="vertical-align: middle; margin-right: 6px;">
+        公式LINE：<a href="https://lin.ee/kjGqf6D"
+          target="_blank">劇団つぎはぎ</a>
+      </p>
+      <p>
         <img src="images/Corich-icon.png" alt="Corichアイコン" width="20" height="20"
           style="vertical-align: middle; margin-right: 6px;">
         Corich：<a href="https://stage.corich.jp/troupe/119054"
