--- a/homepage/home.html
+++ b/homepage/home.html
@@ -53,11 +53,9 @@
 
     <section id="home">
       <h2>新着情報</h2>
-      <a href="contact.html">● 劇団公式SNSアカウント開設</a>
+      <p>● 公式LINE限定情報公開中！</p>
+      <a href="https://lin.ee/kjGqf6D">● 公式LINE登場</a>
       <p>● 劇団公式HPを開設</p>
-      <a href="shows.html">● 初回公演『大人なら、大人だから、大人でも。』始動！</a>
-      <p>● ポスター及びフライヤーを公開</p>
-      <a href="support.html">● 初回公演チケット販売開始</a>
       <div class="poster-gallery">
         <img src="images/Otonanaraotonadakaraotonademo_flier.jpg" alt="最新公演ポスター1" class="poster-img">
         <img src="images/Otonanaraotonadakaraotonademo_poster.png" alt="最新公演ポスター2" class="poster-img">
@@ -71,11 +69,18 @@
     </section>
 
     <section>
-      <h2>クラファン募集中！</h2>
-      <p>私たちの劇団を応援してくれる方を探しています</p>
-      <a href="support.html">詳細はこちら</a>
+      <h2>旗揚げ公演映像、販売中！</h2>
+      <p>公式LINEにて、旗揚げ公演「大人なら、大人だから、大人でも。」本番映像を販売しています。</p>
+      <a href="https://lin.ee/kjGqf6D">公式LINE登録はこちら</a>
     </section>
 
+
+      <h2>アクセスカウンター</h2>
+    <!--アクセスカウンター(外部サイトに依存)-->
+  <table border="0" cellspacing="0" cellpadding="0"><tr><td align="center"><a href="http://www.rays-counter.com/"><img src="http://www.rays-counter.com/d1303_f6_004/691a96f8dc3f5/" alt="アクセスカウンター" border="0"></a></td></tr><tr><td align="center"><img src="http://www.rays-counter.com/images/counter_01.gif" border="0"><img src="http://www.rays-counter.com/images/counter_02.gif" border="0"><img src="http://www.rays-counter.com/images/counter_03.gif" border="0"><img src="http://www.rays-counter.com/images/counter_04.gif" border="0" ><img src="http://www.rays-counter.com/images/counter_05.gif" border="0"></td></tr></table>
+    <!--ここまで-->
+
+    
     <footer>
       <p>&copy; 2025 劇団つぎはぎ All rights reserved.</p>
     </footer>
