--- a/homepage/otonanara.html
+++ b/homepage/otonanara.html
@@ -14,7 +14,7 @@
     <meta name="twitter:image" content="https://tsugihagi.com/images/og-image.png">
     <meta property="og:image" content="https://tsugihagi.com/images/og-image.png">
     <meta name="twitter:site" content="@tsugihagi_troup">
-    <title>劇団つぎはぎ - 公式サイト</title>
+    <title>大人なら、大人だから、大人でも。 - 特設サイト</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/header-inner.css">
     <link rel="stylesheet" href="css/icon.css">
@@ -36,14 +36,15 @@
         .site-header {
             background: linear-gradient(90deg, #533900, #e5b95b);
             color: #f1f2ec;
-            padding: 15px 40px;
-            text-align: center;
+            padding: 35px 20px;
             top: 0;
             width: 100%;
             z-index: 1;
             position: relative;
             display: flex;
-            align-items: flex-end;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
         }
 
         section {
@@ -70,6 +71,15 @@
             text-align: center;
             padding: 20px;
             margin-top: 40px;
+        }
+
+        .header-inner {
+            max-width: 900px;
+            width: 100%;
+        }
+
+        img {
+            max-width: 100%; height: auto;
         }
 
         .member {
@@ -186,7 +196,6 @@
                 <p>まだ大人でないあなたと、大人になってしまったあなたへの物語。</p>
             </div>
         </header>
-
         <section id="characters">
             <!-- ポスター画像 -->
             <div class="poster-gallery">
@@ -230,7 +239,7 @@
             <h2>登場人物</h2>
             <div class="character-list">
                 <div class="character-card">
-                    <img src="images/otonanara/koda.jpg" alt="koda">
+                    <!--<img src="images/otonanara/koda.jpg" alt="koda">-->
                     <h3>河合 幸(かわい みゆき)</h3>
                     <p>&nbsp;&nbsp;&nbsp;&nbsp;パパ活がやめられない、見た目も精神もそろそろしんどい。<br>&nbsp;&nbsp;&nbsp;&nbsp;小学校の頃の将来の夢はピンクのかわいい一軒家で優しい旦那さんとかわいい子供とチワワと暮らすこと。
                     </p>
@@ -238,7 +247,7 @@
                 </div>
 
                 <div class="character-card">
-                    <img src="images/otonanara/kawai.jpg" alt="kawai">
+                    <!--<img src="images/otonanara/kawai.jpg" alt="kawai">-->
                     <h3>倖田 莉乃(こうだ りの)</h3>
                     <p>&nbsp;&nbsp;&nbsp;&nbsp;不倫体質、いつも自分だけ不倫と知らないで慰謝料に次ぐ慰謝料を請求され続けている。恋のリボ払い。若く見える年上が好きなだけなのに、おじさん好きといわれるのが納得いかない。
                     </p>
@@ -246,7 +255,7 @@
                 </div>
 
                 <div class="character-card">
-                    <img src="images/otonanara/konoya.jpg" alt="konoya">
+                    <!--<img src="images/otonanara/konoya.jpg" alt="konoya">-->
                     <h3>幸野谷 将(こうのや ゆき)</h3>
                     <p>&nbsp;&nbsp;&nbsp;&nbsp;ギャンブル依存、エリートだったのにスポーツ賭博にうっかりハマってしまったのが運の尽き。クズだが、放っておけないと思わせるタイプ。<br>&nbsp;&nbsp;&nbsp;&nbsp;元カノ全員がうっすら未練を持っている。
                     </p>
@@ -254,7 +263,7 @@
                 </div>
 
                 <div class="character-card">
-                    <img src="images/otonanara/uemura.jpg" alt="uemura">
+                    <!--<img src="images/otonanara/uemura.jpg" alt="uemura">-->
                     <h3>上幸 翼(うえむら たすく)</h3>
                     <p>&nbsp;&nbsp;&nbsp;&nbsp;ゲイ、ノンケばかり好きになる、気分は万年ジュリエット。親の干渉がゼロで家族に何も求められてこなかったので自分を頼ってくれる男がタイプだが、そのことは自覚していない。
                     </p>
@@ -262,7 +271,7 @@
                 </div>
 
                 <div class="character-card">
-                    <img src="images/otonanara/namikawa.jpg" alt="namikawa">
+                    <!--<img src="images/otonanara/namikawa.jpg" alt="namikawa">-->
                     <h3>濤川 幸来(なみかわ さら)</h3>
                     <p>&nbsp;&nbsp;&nbsp;&nbsp;浪人が留まるところを知らない、受験料とか年齢とか積み重なった参考書とか、全てがもう引き返せない所まで来ている。正直ここまで受からないのは人より時間のかかる苗字が悪い気もする。
                     </p>
@@ -270,7 +279,7 @@
                 </div>
 
                 <div class="character-card">
-                    <img src="images/otonanara/okugawa.jpg" alt="okugawa">
+                    <!--<img src="images/otonanara/okugawa.jpg" alt="okugawa">-->
                     <h3>奥川 幸司(おくがわ こうじ)</h3>
                     <p>&nbsp;&nbsp;&nbsp;&nbsp;就活がうまくいかず、この世の終わりのような闇金会社に就職してしまった。<br>&nbsp;&nbsp;&nbsp;&nbsp;就職のために上京してきたので給食センターのおばさんをしている母親と電話をした後はいつも少し泣いている。
                     </p>
@@ -278,7 +287,7 @@
                 </div>
 
                 <div class="character-card">
-                    <img src="images/otonanara/miyama.jpg" alt="miyama">
+                    <!--<img src="images/otonanara/miyama.jpg" alt="miyama">-->
                     <h3>深山 一(みやま はじめ)</h3>
                     <p>&nbsp;&nbsp;&nbsp;&nbsp;なんか喫茶店の店長かっこいいなと思い開業した。想定していたより楽しくて天職だと思っている。<br>&nbsp;&nbsp;&nbsp;&nbsp;この世のデリカシーと呼ばれるものを一つも持ち合わせていない。
                     </p>
@@ -289,7 +298,7 @@
 
             <h2>チケット情報</h2>
             </p>
-            <a href="support.html">◯チケット購入はこちら</a>
+            <p>◯この公演のチケット販売及び支援の受付は締め切りました。ありがとうございました。</p>
             </p>
             <br>
 
@@ -297,7 +306,7 @@
             <p>
                 <img src="images/icon-circle_transparent.png" alt="つぎはぎアイコン" width="20" height="20"
                     style="vertical-align: middle; margin-right: 6px;">
-                メール：<a href="https://tsugihagi.com">劇団つぎはぎ公式ホームページ</a>
+                劇団つぎはぎ公式サイト：<a href="https://tsugihagi.com">tsugihagi.com</a>
             </p>
             <p>
                 <img src="images/mail-icon.png" alt="メールアイコン" width="20" height="20"
