--- a/homepage/shows.html
+++ b/homepage/shows.html
@@ -54,10 +54,11 @@
 
     <section id="shows">
       <h2>公演情報</h2>
-      <h3>【最新公演】</h3>
+      <h3>【過去公演】</h3>
       <h4>『大人なら、大人だから、大人でも。』</h4>
+      <h5> 本番映像を販売中！ご購入は公式LINEから</h5>
       <div class="button-row">
-        <a class="public-btn" href="Otonanara.html" target="_blank">公演特設ページはこちら</a>
+        <a class="public-btn" href="otonanara.html" target="_blank">公演特設ページはこちら</a>
       </div>
       <p>
         <br>
@@ -75,7 +76,6 @@
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;15日(月) 5st:開場18:00～,上演18:30～<br>
         ◯上演時間<br>
         &nbsp;&nbsp;&nbsp;&nbsp;約120分<br>
-        <a href="support.html">◯チケット購入はこちら</a>
       </p>
 
       <!-- ポスター画像 -->
@@ -89,6 +89,8 @@
         <span class="close">&times;</span>
         <img class="lightbox-content" id="lightboxImg">
       </div>
+
+      <p>◯この公演のチケット販売及び支援の受付は締め切りました。ありがとうございました。</p>
     </section>
 
     <footer>
