--- a/homepage/support.html
+++ b/homepage/support.html
@@ -53,6 +53,8 @@
     <section id="support">
       <h2>支援・チケット</h2>
       <p>劇団つぎはぎでは、クラウドファンディングやチケットのご予約を受け付けております。</p>
+      <h3>現在販売中のチケット及び公開中の支援ページはありません。</h3>
+      <!--
       <h3>大人なら、大人だから、大人でも。</h3>
       <p>
         ◯チケット<br>
@@ -72,6 +74,7 @@
           target="_blank">支援ページはこちら</a>
         <a class="public-btn" href="https://ticket.corich.jp/apply/396629/" target="_blank">チケット予約ページ</a>
       </div>
+      -->
     </section>
 
     <footer>
