--- a/homepage/contact.html
+++ b/homepage/contact.html
@@ -48,6 +48,7 @@
       <a href="shows.html">公演情報</a>
       <a href="support.html">支援・チケット</a>
       <a href="contact.html" class="active">お問い合わせ</a>
+      <a href="shop.html">ショップ</a>
     </nav>
 
     <section id="contact">
