--- a/homepage/shop.html
+++ b/homepage/shop.html
@@ -4,17 +4,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>劇団つぎはぎ - 公式サイト</title>
   <meta name="description" content="劇団つぎはぎの公式サイト。公演情報、支援チケット、お問い合わせなど">
   <meta property="og:title" content="劇団つぎはぎ 公式サイト">
   <meta property="og:description" content="継いで、剥いで、あなたを魅せる舞台を作る。">
   <meta property="og:image" content="http://tsugihagi.com/images/og-image.png">
   <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@tsugihagi_troup">
   <meta name="twitter:title" content="劇団つぎはぎ 公式サイト">
   <meta name="twitter:description" content="継いで、剥いで、あなたを魅せる舞台を作る。">
   <meta name="twitter:image" content="http://tsugihagi.com/images/og-image.png">
-  <meta property="og:image" content="http://tsugihagi.com/images/og-image.png">
-  <meta name="twitter:site" content="@tsugihagi_troup">
-  <title>劇団つぎはぎ - 公式サイト</title>
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/active.css">
   <link rel="stylesheet" href="css/botton-row.css">
@@ -47,39 +46,17 @@
     <nav class="nav" id="navMenu">
       <a href="home.html">ホーム</a>
       <a href="about.html">劇団紹介</a>
-      <a href="shows.html" class="active">公演情報</a>
+      <a href="shows.html">公演情報</a>
       <a href="support.html">支援・チケット</a>
       <a href="contact.html">お問い合わせ</a>
-      <a href="shop.html">ショップ</a>
+      <a href="shop.html" class="active">ショップ</a>
     </nav>
 
-    <section id="shows">
-      <h2>公演情報</h2>
-      <h3>【過去公演】</h3>
-      <h4>『大人なら、大人だから、大人でも。』</h4>
-      <h5> 本番映像を販売中！ご購入は公式LINEから</h5>
-      <div class="button-row">
-        <a class="public-btn" href="otonanara.html" target="_blank">公演特設ページはこちら</a>
-      </div>
-      <p>
-        <br>
-        ◯場所<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;藍住町総合文化ホール 2F  交流室2<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;〒771-1203&nbsp;徳島県板野郡藍住町奥野字矢上前32-1<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;鉄道：JR徳島駅からJR勝瑞駅&nbsp;12分<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;バス：JR徳島駅から「藍住役場前」停留所下車&nbsp;&nbsp;のち徒歩5分<br>
-        ◯日時<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;2025年9月<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;14日(日) 1st:開場14:00～,上演14:30～<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;14日(日) 2st:開場18:00～,上演18:30～<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;15日(月) 3st:開場 9:30～,上演10:00～<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;15日(月) 4st:開場14:00～,上演14:30～<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;15日(月) 5st:開場18:00～,上演18:30～<br>
-        ◯上演時間<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;約120分<br>
-      </p>
-
-      <!-- ポスター画像 -->
+    <section id="home">
+      <h2>新着情報</h2>
+      <p>● 公式LINE限定情報公開中！</p>
+      <a href="https://lin.ee/kjGqf6D">● 公式LINE登場</a>
+      <p>● 劇団公式HPを開設</p>
       <div class="poster-gallery">
         <img src="images/Otonanaraotonadakaraotonademo_flier.jpg" alt="最新公演ポスター1" class="poster-img">
         <img src="images/Otonanaraotonadakaraotonademo_poster.png" alt="最新公演ポスター2" class="poster-img">
@@ -90,8 +67,12 @@
         <span class="close">&times;</span>
         <img class="lightbox-content" id="lightboxImg">
       </div>
+    </section>
 
-      <p>◯この公演のチケット販売及び支援の受付は締め切りました。ありがとうございました。</p>
+    <section>
+      <h2>旗揚げ公演映像、販売中！</h2>
+      <p>公式LINEにて、旗揚げ公演「大人なら、大人だから、大人でも。」本番映像を販売しています。</p>
+      <a href="https://lin.ee/kjGqf6D">公式LINE登録はこちら</a>
     </section>
 
     <footer>
